--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -13,19 +13,19 @@
 <a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/4/13/n12878121.md#1" title="【独家】中共偷偷删除网上军民融合信息""><img width="73" src="https://i.epochtimes.com/assets/uploads/2018/11/GettyImages-1055941042-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/5/2/n12919608.md#1" title="探秘世界各国的真实军力——美军有多强（一）""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/05/id12919611-50037400673_659f7ff6e9_o-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/ibqqdx3304/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://ibqqdx3304.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>2分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/5/3/n12921162.md#1">遭17年冤狱 四川法轮功学员钟俊芳含冤离世</a><br>
-:clock8: <em>14分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/5/3/n12921468.md#1">佛州老妇疫情中善举 每周义务煮千人份食物</a><br>
-:clock8: <em>22分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/5/3/n12921004.md#1">组图：印度医院发生大火 至少18人死亡</a><br>
-:clock8: <em>31分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/5/3/n12921736.md#1">匈牙利首都设复旦大学分校 怪异协议遭谴责</a><br>
-:clock8: <em>41分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/5/3/n12921706.md#1">庆5.13大法日 纽约州奥伯尼市长颁褒奖令</a><br>
-:clock8: <em>45分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/5/3/n12921765.md#1">印度连12天日增病例逾30万 专家预测峰值</a><br>
+:clock8: <em>1分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/5/3/n12921522.md#1">陆男驾军规橡皮艇偷渡来台 专家：绝非巧合</a><br>
+:clock8: <em>5分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/5/3/n12921880.md#1">美国专家：中共驻美记者至少一部分是特务</a><br>
+:clock8: <em>12分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/5/3/n12921651.md#1">雅虎AOL再易主 Verizon50亿赔卖给阿波罗</a><br>
+:clock8: <em>19分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/5/3/n12921162.md#1">遭17年冤狱 四川法轮功学员钟俊芳含冤离世</a><br>
+:clock8: <em>31分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/5/3/n12921468.md#1">佛州老妇疫情中善举 每周义务煮千人份食物</a><br>
+:clock8: <em>40分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/5/3/n12921004.md#1">组图：印度医院发生大火 至少18人死亡</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/5/2/n12918882.md#1">【翻墙必看】中共高层多个不妙信号出现</a><br>
 <a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/5/1/n12917976.md#1">【拍案惊奇】山东号停滞？清末学者预言中共结局</a><br>
 <a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/5/1/n12918289.md#1">天津和平公安分局主任跳楼身亡 官方噤声</a><br>
 <a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/5/1/n12918516.md#1">中共政法委嘲讽印度疫情引抗议 被指“无人性”</a><br>
 <a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/5/1/n12918311.md#1">中共官媒无下限讽印度疫情 引爆众怒</a><br>
-<a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/5/2/n12919662.md#1">西安的哥猝死仍被交警贴罚单 网民：流氓执法</a><br>
+<a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/5/2/n12919557.md#1">过冬取暖主要靠抖 习“国师”翟东昇打脸中共</a><br>
 <a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/5/1/n12918415.md#1">美专家：中共若武攻台湾 或跟芯片短缺有关</a><br>
 <a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/5/1/n12918426.md#1">分析：中共是自己的最大敌人</a><br>
 <br><p align="center"><a href="https://github.com/ibqqdx3304/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>纪元推荐</strong></p></h2>
@@ -38,23 +38,22 @@
 <a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/4/27/n12909575.md#1">【独家】中共推光伏产业 拜登堕气候陷阱</a><br>
 <br><p align="center"><a href="https://github.com/ibqqdx3304/djy/blob/master/gb/news392.md#1">更多......</a></p></td><td VALIGN=TOP width="371">
 <a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/5/2/n12919632.md#1">习近平权力难保？英前外交官：政权更迭势在必行</a><br>
-<a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/5/2/n12919806.md#1">当年为何选在柏林向习喊话 前美国务次卿解释</a><br>
-<a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/5/3/n12920408.md#1">田云：谴责中共打压香港法轮功 呼唤正义良知</a><br>
-<a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/5/2/n12919557.md#1">过冬取暖主要靠抖 习“国师”翟东昇打脸中共</a><br>
-<a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/5/2/n12919934.md#1">美日警告不要擅改东海现状 向中共释何信号</a><br>
+<a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/5/3/n12920822.md#1">大陆房价续下跌 牡丹江房价已跌回14年前</a><br>
+<a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/5/3/n12920507.md#1">广西小官巨贪1.69亿 嫖娼养情人买豪车</a><br>
+<a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/5/2/n12919662.md#1">西安的哥猝死仍被交警贴罚单 网民：流氓执法</a><br>
+<a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/5/2/n12919608.md#1">探秘世界各国的真实军力——美军有多强（一）</a><br>
 <a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/4/13/n12878121.md#1">【独家】中共偷偷删除网上军民融合信息</a><br>
-<a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/5/2/n12919748.md#1">绝不屈膝 前美国务次卿：世界看清习近平3C原则</a><br>
+<a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/5/2/n12919806.md#1">当年为何选在柏林向习喊话 前美国务次卿解释</a><br>
 <a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/5/1/n12918324.md#1">钟原：中共政治局会议透露了不妙信号</a><br>
 <a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/5/3/n12920277.md#1">【翻墙必看】分析：中共政权更迭的两种可能方式</a><br>
-<a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/5/2/n12919329.md#1">【名家专栏】FBI突袭纽约前市长的真正原因</a><br>
-<a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/5/3/n12920822.md#1">大陆房价续下跌 牡丹江房价已跌回14年前</a><br>
-<a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/5/2/n12919737.md#1">印度疫情大爆发 专家分析对国际社会的影响</a><br>
+<a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/5/2/n12919934.md#1">美日警告不要擅改东海现状 向中共释何信号</a><br>
+<a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/5/2/n12919748.md#1">绝不屈膝 前美国务次卿：世界看清习近平3C原则</a><br>
+<a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/5/2/n12919696.md#1">又被中共官方点名 范冰冰发文回应引热议</a><br>
 <a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/5/3/n12921162.md#1">遭17年冤狱 四川法轮功学员钟俊芳含冤离世</a><br>
 <a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/5/3/n12921612.md#1">不只弯道超车 中共围剿特斯拉阴谋（下）</a><br>
 <a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/5/3/n12921502.md#1">【新闻大家谈】拜登慢动作美印生隙？中共搅场</a><br>
 <a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/5/2/n12919925.md#1">古天乐黑人替身照热传 影片监制曝秘辛</a><br>
 <a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/5/1/n12918302.md#1">陕西第三任政法委书记宋洪武迫害法轮功罪行</a><br>
-<a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/5/2/n12919696.md#1">又被中共官方点名 范冰冰发文回应引热议</a><br>
 <a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/5/2/n12919595.md#1">不只弯道超车 中共围剿特斯拉阴谋（上）</a><br>
 <a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/5/2/n12919296.md#1">布林肯赴伦敦参加G7外长会 联盟施压中共</a><br>
 <a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/5/2/n12918735.md#1">杨晖律师：中国到处是高压线 不止一根</a><br>
@@ -97,15 +96,16 @@
 <a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/4/28/n12911564.md#1">陕西第二任政法委书记赵正永迫害法轮功罪行</a><br>
 <a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/4/29/n12912506.md#1">香港大纪元就记者遭跟踪滋扰事件声明</a><br>
 <a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/4/28/n12911949.md#1">【重播】拜登首次国会演说 共和党代表反驳</a><br>
+<a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/4/29/n12912331.md#1">中共在湄公河的投资是一场浮士德式交易</a><br>
 <br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nsc413.md#1">更多要闻......</a></p></td><td VALIGN=TOP rowspan=7 width="156" align="middle"><a href="https://gitlab.com/szzdlab/vdSY-Classical-Chinese-Dance-Technique-Collection-2018/raw/master/SY-Classical-Chinese-Dance-Technique-Collection-2018.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://gitlab.com/szzdlab/vd9p/raw/master/9p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://gitlab.com/szzdlab/vdzjmd1_19/raw/master/zjmd1_19.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://gitlab.com/szzdlab/vdzf-dsp-1128/raw/master/zf-dsp-1128.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://gitlab.com/szzdlab/vdst5-29/raw/master/st5-29.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/changzhi.jpg" title="古今奇观 藏字石" alt="古今奇观 藏字石"><br>古今奇观 藏字石</a><br><a href="https://gitlab.com/szzdlab/vd3-JTT_CN_MH-360p/raw/master/3-JTT_CN_MH-360p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://gitlab.com/szzdlab/vdwl/raw/master/wl.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://gitlab.com/szzdlab/vdhongchaoyinmou-hi/raw/master/hongchaoyinmou-hi.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://gitlab.com/szzdlab/vdtzrs/raw/master/tzrs.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://gitlab.com/szzdlab/vder3n_3VVJ/raw/master/er3n_3VVJ.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://gitlab.com/szzdlab/vdXmL0_0XDL2p/raw/master/XmL0_0XDL2p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://gitlab.com/szzdlab/vdNG8l/raw/master/NG8l.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://gitlab.com/szzdlab/vdwt6Y_vPhM/raw/master/wt6Y_vPhM.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://gitlab.com/szzdlab/vd5Vu3_XS2V/raw/master/5Vu3_XS2V.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://gitlab.com/szzdlab/vdvG2w_fwq/raw/master/vG2w_fwq.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/6c10-720.jpg" title="中共的迫害与掩盖" alt="中共的迫害与掩盖"><br>中共的迫害与掩盖</a><br><a href="https://gitlab.com/szzdlab/vdO2jN_uD/raw/master/O2jN_uD.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://gitlab.com/szzdlab/vd1400forge-1210/raw/master/1400forge-1210.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/1400l.jpg" title="剖析中共造假" alt="剖析中共造假"><br>剖析中共造假</a><br><a href="https://gitlab.com/szzdlab/vdC1WZ_mj/raw/master/C1WZ_mj.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://gitlab.com/szzdlab/vdqh/raw/master/qh.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://gitlab.com/szzdlab/vdJZ5e_5Vusp/raw/master/JZ5e_5Vusp.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/jian-z513.jpg" title="见证五月十三日" alt="见证五月十三日"><br>见证五月十三日</a><br><a href="https://gitlab.com/szzdlab/vd0iY/raw/master/0iY.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://gitlab.com/szzdlab/vdguanguimin/raw/master/guanguimin.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://gitlab.com/szzdlab/vdmjjy/raw/master/mjjy.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://gitlab.com/szzdlab/vdc4rB_QQbr/raw/master/c4rB_QQbr.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://gitlab.com/szzdlab/vdO23c_E/raw/master/O23c_E.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
-<tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://D site IP/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: 49,094</div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
+<tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://1.163.61.17/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: 49,264</div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
 
 ```diff
 !退出中共党、团、队总人数:
 
-!共 376,695,417 人
+!共 376,695,728 人
 ```
-</strong></h3></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/3/n12920555.md#1"><img width="320" align ="left" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/3/n12920555.md#1">新闻自由日 中共被评为言论自由最大敌人</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/2/n12919119.md#1">绿叶行动薛仁义出狱日 重庆多人被控制</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/1/n12917361.md#1">北京小汤山强拆后续 业主失联小区清场</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/4/29/n12913564.md#1">中共株连制打压百姓 母亲被儿子撵出家门</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/4/30/n12916513.md#1">富商控全国人大蔡学恩律所 涉嫌虚构诉讼（上）</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/4/29/n12914624.md#1">退休上校死于山东监狱 中共被指步步违法</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/3/n12921591.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/05/id12921755-000_8UF4VH-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/3/n12921591.md#1">富达腰斩蚂蚁集团估值 至1440亿美元</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/3/n12920878.md#1">美301报告：疫情之下中共侵权活动更甚</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/3/n12920527.md#1">中共4月地方债发行创八个月新高 将继续增加</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/2/n12919927.md#1">美议员提法案 限制世界银行向北京提供资金</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/2/n12919948.md#1">中国28家银行四月发债2196亿人民币</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/2/n12919070.md#1">【疫情5.2】法国医疗援助设备抵达印度</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/3/n12921736.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/05/id12921759-GettyImages-1189591746-600x400-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/3/n12921736.md#1">匈牙利首都设复旦大学分校 怪异协议遭谴责</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/3/n12921375.md#1">新西兰总理：与中共的分歧越来越难调和</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/3/n12920507.md#1">广西小官巨贪1.69亿 嫖娼养情人买豪车</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/2/n12919247.md#1">美两党议员挺台参与世卫大会“让台湾帮忙”</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/2/n12919911.md#1">中共海警船频近钓鱼岛 日本拟成立运输部队</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/1/n12918496.md#1">美国密州就疫情追责 传唤中共多个部委</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/3/n12921530.md#1"><img width="320" align ="left" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/3/n12921530.md#1">河南一男子染疫治愈28天后复阳 网民忧心</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/3/n12920828.md#1">受雷暴雨影响 北京、武汉共取消61航班</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/3/n12920331.md#1">川渝降特大暴雨 重庆31航班转降其它机场</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/3/n12920303.md#1">云南镇雄采石场山体垮塌 致1死2被埋</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/2/n12919962.md#1">印度公司8台湾人打科兴疫苗5人染疫1去世</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/2/n12919112.md#1">浙江一病例隔离14天后才呈阳性 曾搭乘火车</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/3/n12921546.md#1"><img width="320" align ="left" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/3/n12921546.md#1">四川男吃生肉惹祸 脑内像“一块芝麻饼”</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/3/n12921049.md#1">五一假期 苏州拙政园景区门票炒到240元</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/3/n12920261.md#1">三退声明精选（2021/05/02）</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/3/n12920037.md#1">中国人口拐卖犯罪猖獗 被拐卖者需被“教育挽救”</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/2/n12919449.md#1">杭州西湖游客如织 泰山人多景区不认遭驳斥</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/2/n12919222.md#1">五一武汉上海办音乐节 人潮挤爆未戴口罩</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/3/n12920900.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/05/id12920960-2105030413482378-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/3/n12920900.md#1">台湾诗人管管跌倒昏迷辞世 享寿92岁</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/1/n12917687.md#1">安徽一小学老师被停职 烫伤殴打多名学生</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/4/29/n12913513.md#1">传中南财经政法大学挖出两地雷 网络热议</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/4/28/n12910739.md#1">广西幼儿园砍人案十八伤 传多名幼儿死亡</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/4/27/n12909705.md#1">郭富城常演深沉角色 自认个性有趣不拒拍喜剧</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/4/27/n12909172.md#1">美宣布放宽旅行限制 中国学生今秋可赴美</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr>
+</strong></h3></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/3/n12920555.md#1"><img width="320" align ="left" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/3/n12920555.md#1">新闻自由日 中共被评为言论自由最大敌人</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/2/n12919119.md#1">绿叶行动薛仁义出狱日 重庆多人被控制</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/1/n12917361.md#1">北京小汤山强拆后续 业主失联小区清场</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/4/29/n12913564.md#1">中共株连制打压百姓 母亲被儿子撵出家门</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/4/30/n12916513.md#1">富商控全国人大蔡学恩律所 涉嫌虚构诉讼（上）</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/4/29/n12914624.md#1">退休上校死于山东监狱 中共被指步步违法</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/3/n12921591.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/05/id12921755-000_8UF4VH-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/3/n12921591.md#1">富达腰斩蚂蚁集团估值 至1440亿美元</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/3/n12920878.md#1">美301报告：疫情之下中共侵权活动更甚</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/3/n12920527.md#1">中共4月地方债发行创八个月新高 将继续增加</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/2/n12919927.md#1">美议员提法案 限制世界银行向北京提供资金</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/2/n12919948.md#1">中国28家银行四月发债2196亿人民币</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/2/n12919070.md#1">【疫情5.2】法国医疗援助设备抵达印度</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/3/n12921880.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2019/05/Plin1-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/3/n12921880.md#1">美国专家：中共驻美记者至少一部分是特务</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/3/n12921736.md#1">匈牙利首都设复旦大学分校 怪异协议遭谴责</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/3/n12921375.md#1">新西兰总理：与中共的分歧越来越难调和</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/2/n12919247.md#1">美两党议员挺台参与世卫大会“让台湾帮忙”</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/2/n12919911.md#1">中共海警船频近钓鱼岛 日本拟成立运输部队</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/1/n12918496.md#1">美国密州就疫情追责 传唤中共多个部委</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/3/n12921530.md#1"><img width="320" align ="left" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/3/n12921530.md#1">河南一男子染疫治愈28天后复阳 网民忧心</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/3/n12920828.md#1">受雷暴雨影响 北京、武汉共取消61航班</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/3/n12920331.md#1">川渝降特大暴雨 重庆31航班转降其它机场</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/3/n12920303.md#1">云南镇雄采石场山体垮塌 致1死2被埋</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/2/n12919962.md#1">印度公司8台湾人打科兴疫苗5人染疫1去世</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/2/n12919737.md#1">印度疫情大爆发 专家分析对国际社会的影响</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/3/n12921546.md#1"><img width="320" align ="left" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/3/n12921546.md#1">四川男吃生肉惹祸 脑内像“一块芝麻饼”</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/3/n12921049.md#1">五一假期 苏州拙政园景区门票炒到240元</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/3/n12920261.md#1">三退声明精选（2021/05/02）</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/3/n12920037.md#1">中国人口拐卖犯罪猖獗 被拐卖者需被“教育挽救”</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/2/n12919449.md#1">杭州西湖游客如织 泰山人多景区不认遭驳斥</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/2/n12919222.md#1">五一武汉上海办音乐节 人潮挤爆未戴口罩</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/3/n12920900.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/05/id12920960-2105030413482378-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/3/n12920900.md#1">台湾诗人管管跌倒昏迷辞世 享寿92岁</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/1/n12917687.md#1">安徽一小学老师被停职 烫伤殴打多名学生</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/4/29/n12913513.md#1">传中南财经政法大学挖出两地雷 网络热议</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/4/28/n12910739.md#1">广西幼儿园砍人案十八伤 传多名幼儿死亡</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/4/27/n12909705.md#1">郭富城常演深沉角色 自认个性有趣不拒拍喜剧</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/4/27/n12909172.md#1">美宣布放宽旅行限制 中国学生今秋可赴美</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr>
 <tr><td VALIGN=TOP width="370"><h2><p><strong>独家视角</strong></p></h2><a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/4/19/n12888922.md#1">【独家】文件爆西藏部队缺疫苗向河北求援</a><br>
 <a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/4/4/n12857876.md#1">【独家】联合国“移民网络”项目引担忧</a><br>
 <a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/3/29/n12842945.md#1">【独家】江苏内部文件泄迫害法轮功内幕</a><br>
